<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright (C) 2008 OpenIntents.org
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context="cy.crbook.CRSettingActivity" >

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <CheckBox
        android:id="@+id/cbEnableSNE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enableSNE" />

    <Button
        android:id="@+id/btnUseSNE"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:text="UseSNE" />

    <TableRow
        android:id="@+id/TableRow02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nextFocusLeft="@+id/TextView03"
            android:nextFocusUp="@+id/TextView03"
            android:text="@string/SNEIP" />

        <EditText
            android:id="@+id/SNEIP"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nextFocusLeft="@+id/TextView02"
            android:nextFocusUp="@+id/TextView02"
            android:text="@string/SNEPort" />

        <EditText
            android:id="@+id/SNEPort"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </TableRow>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusLeft="@id/textView1"
                android:nextFocusUp="@id/textView1"
                android:text="@string/DownloadThreads" />

            <EditText
                android:id="@+id/downloadThreadNum"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:inputType="number"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusLeft="@+id/TextView01"
                android:nextFocusUp="@+id/TextView01"
                android:text="@string/ItemsPerPage" />

            <EditText
                android:id="@+id/itemsPerPage"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextViewSaveTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SaveTo" />

            <Spinner
                android:id="@+id/spinnerWriteCacheMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnClearCache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ClearCache" />

            <Button
                android:id="@+id/btnCacheDir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CacheDir" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextViewLoadFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LoadFrom" />

            <Spinner
                android:id="@+id/spinnerReadFromMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextViewIndex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Indexing" />

            <CheckBox
                android:id="@+id/localMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LocalMode" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/cfsSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showCFSSettingDialog" />
        </TableRow>
    </TableLayout>

</LinearLayout>